--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: git-gateway
 
-media_folder: "dist/images/uploads" # Media files will be stored in the repo under static/images/uploads
+media_folder: "public/images/uploads" # Media files will be stored in the repo under static/images/uploads
 public_folder: "/images/uploads" # The src attribute for uploaded media will begin with /images/uploads
 
 collections:
