--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: git-gateway
 
-media_folder: "public/images/uploads" # Media files will be stored in the repo under static/images/uploads
+media_folder: "images/uploads" # Media files will be stored in the repo under images/uploads
 
 collections:
   - name: "page" # Used in routes, e.g., /admin/collections/blog
