--- a/admin/config.yml
+++ b/admin/config.yml
@@ -5,7 +5,7 @@ media_folder: "images/uploads" # Media files will be stored in the repo under im
 
 collections:
   - name: "pages" # Used in routes, e.g., /admin/collections/blog
-    label: "Pages" # Used in the UI
+    label: "Page" # Used in the UI
     folder: "data/_pages" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
