--- a/package.json
+++ b/package.json
@@ -4,12 +4,27 @@
   "private": true,
   "description": "Website of Unionen Seniorer Sjuhall",
   "scripts": {
-    "start": "node dev.js",
-    "build": "node index.js"
+    "start": "webpack-dev-server",
+    "build": "webpack -p"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "browser-sync": "^2.23.6",
+    "copy-webpack-plugin": "^4.4.1",
+    "css-loader": "^0.28.9",
     "fs-extra": "^5.0.0",
-    "meta-marked": "^0.4.2"
+    "html-webpack-plugin": "^2.30.1",
+    "meta-marked": "^0.4.2",
+    "style-loader": "^0.20.2",
+    "webpack": "^3.11.0",
+    "webpack-dev-server": "^2.11.1"
+  },
+  "dependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2"
   }
 }
