--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -6,7 +6,7 @@ media_folder: "images/uploads" # Media files will be stored in the repo under im
 collections:
   - name: "page" # Used in routes, e.g., /admin/collections/blog
     label: "Page" # Used in the UI
-    folder: "data/_pages" # The path to the folder where the documents are stored
+    folder: "src/data/_pages" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
@@ -21,7 +21,7 @@ collections:
     files:
       - name: "general"
         label: "General"
-        file: "data/_settings/general.json"
+        file: "src/data/_settings/general.json"
         extension: json
         format: json
         description: "General Site Settings"
