--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -15,6 +15,7 @@ collections:
       - {label: "Body", name: "body", widget: "markdown"}
   - name: "page"
     label: "Page"
+    create: true
     delete: false # Prevent users from deleting documents in this collection
     files:
       - name: "home"
