--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -4,11 +4,16 @@ backend:
 media_folder: "images/uploads" # Media files will be stored in the repo under images/uploads
 
 collections:
-
   - name: "page"
     label: "Page"
+    folder: "src/data/_pages"
+    slug: "{{slug}}"
     create: true
     delete: false # Prevent users from deleting documents in this collection
+    fields: # The fields for each document, usually in front matter
+      - {label: "Layout", name: "layout", widget: "hidden", default: "page"}
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Body", name: "body", widget: "markdown"}
     files:
       - name: "home"
         label: "Home"
