--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -4,26 +4,20 @@ backend:
 media_folder: "images/uploads" # Media files will be stored in the repo under images/uploads
 
 collections:
-  - name: "page"
-    label: "Page"
-    folder: "src/data/_pages"
-    slug: "{{slug}}"
-    create: true
-    delete: false # Prevent users from deleting documents in this collection
+  - name: "homepage" # Used in routes, e.g., /admin/collections/blog
+    label: "Homepage" # Used in the UI
+    file: "src/data/_homepage/homepage.md" # The path to the folder where the documents are stored
     fields: # The fields for each document, usually in front matter
-      - {label: "Layout", name: "layout", widget: "hidden", default: "page"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
-    files:
-      - name: "home"
-        label: "Home"
-        file: "src/data/_pages/home.md"
-        description: "Homepage"
-        fields:
-          - {label: "Layout", name: "layout", widget: "hidden", default: "homepage"}
-          - {label: "Title", name: "title", widget: "string"}
-          - {label: "Title2", name: "title2", widget: "string"}
-          - {label: "Body", name: "body", widget: "markdown"}
+  - name: "page" # Used in routes, e.g., /admin/collections/blog
+    label: "Page" # Used in the UI
+    folder: "src/data/_pages" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    fields: # The fields for each document, usually in front matter
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Body", name: "body", widget: "markdown"}
   - name: "settings"
     label: "Settings"
     delete: false # Prevent users from deleting documents in this collection
