--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -6,10 +6,14 @@ media_folder: "images/uploads" # Media files will be stored in the repo under im
 collections:
   - name: "homepage" # Used in routes, e.g., /admin/collections/blog
     label: "Homepage" # Used in the UI
-    file: "src/data/_homepage/homepage.md" # The path to the folder where the documents are stored
-    fields: # The fields for each document, usually in front matter
-      - {label: "Title", name: "title", widget: "string"}
-      - {label: "Body", name: "body", widget: "markdown"}
+    delete: false # Prevent users from deleting documents in this collection
+    files:
+      - name: "homepage"
+      - label: "Homepage"
+        file: "src/data/_homepage/homepage.md" # The path to the folder where the documents are stored
+        fields: # The fields for each document, usually in front matter
+          - {label: "Title", name: "title", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
   - name: "page" # Used in routes, e.g., /admin/collections/blog
     label: "Page" # Used in the UI
     folder: "src/data/_pages" # The path to the folder where the documents are stored
