--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -11,6 +11,8 @@ collections:
       - name: "homepage"
       - label: "Homepage"
         file: "src/data/_homepage/homepage.md" # The path to the folder where the documents are stored
+        extension: md
+        format: yml
         fields: # The fields for each document, usually in front matter
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
