--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -16,6 +16,30 @@ collections:
         fields: # The fields for each document, usually in front matter
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
+  - name: "test" # Used in routes, e.g., /admin/collections/blog
+    label: "test" # Used in the UI
+    delete: false # Prevent users from deleting documents in this collection
+    files:
+      - name: "test"
+      - label: "test"
+        file: "src/data/_test/test.json" # The path to the folder where the documents are stored
+        extension: json
+        format: json
+        fields: # The fields for each document, usually in front matter
+          - {label: "Title", name: "title", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
+  - name: "test2" # Used in routes, e.g., /admin/collections/blog
+    label: "test2" # Used in the UI
+    delete: false # Prevent users from deleting documents in this collection
+    files:
+      - name: "test2"
+      - label: "test2"
+        file: "src/data/_test2/test2.md" # The path to the folder where the documents are stored
+        extension: md
+        format: yml
+        fields: # The fields for each document, usually in front matter
+          - {label: "Title", name: "title", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
   - name: "page" # Used in routes, e.g., /admin/collections/blog
     label: "Page" # Used in the UI
     folder: "src/data/_pages" # The path to the folder where the documents are stored
