--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -21,6 +21,8 @@ collections:
     folder: "src/data/_pages" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    extension: json
+    format: json
     fields: # The fields for each document, usually in front matter
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
