--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "browser-sync": "^2.23.6",
     "copy-webpack-plugin": "^4.4.1",
     "css-loader": "^0.28.9",
+    "extract-text-webpack-plugin": "^3.0.2",
     "fs-extra": "^5.0.0",
     "html-webpack-plugin": "^2.30.1",
     "meta-marked": "^0.4.2",
-    "style-loader": "^0.20.2",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1"
   },
