--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: git-gateway
 
-media_folder: "images/uploads" # Media files will be stored in the repo under images/uploads
+media_folder: "src/data/uploads" # Media files will be stored in the repo under images/uploads
 
 collections:
   - name: "homepage" # Used in routes, e.g., /admin/collections/blog
