--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "copy-webpack-plugin": "^4.4.1",
     "css-loader": "^0.28.9",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.9",
     "fs-extra": "^5.0.0",
     "html-webpack-plugin": "^2.30.1",
     "meta-marked": "^0.4.2",
