--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -19,21 +19,14 @@ collections:
           - {label: "Text", name: "body", widget: "markdown"}
   - name: "program" # Used in routes, e.g., /admin/collections/blog
     label: "Program" # Used in the UI
-    delete: false # Prevent users from deleting documents in this collection
-    files:
-      - name: "program"
-        label: "Program"
-        file: "src/data/_program/program.json" # The path to the folder where the documents are stored
-        extension: json
-        format: json
-        fields: # The fields for each document, usually in front matter
-          - {label: "Titel", name: "title", widget: "string"}
-          - label: "Program"
-            name: "program"
-            widget: "list"
-            fields:
-            - {label: "Titel", name: "title", widget: "string"}
-            - {label: "PDF", name: "file", widget: "file"}
+    folder: "src/data/_program" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    extension: json
+    format: json
+    fields:
+      - {label: "Titel", name: "title", widget: "string"}
+      - {label: "PDF", name: "file", widget: "file"}
   - name: "bildgalleri" # Used in routes, e.g., /admin/collections/blog
     label: "Bildgalleri" # Used in the UI
     folder: "src/data/_bildgalleri" # The path to the folder where the documents are stored
@@ -42,12 +35,11 @@ collections:
     extension: json
     format: json
     fields:
-      - {label: "Titel för galleri", name: "title", widget: "string"}
+      - {label: "Titel", name: "title", widget: "string"}
       - label: "Bilder"
         name: "bilder"
         widget: "list"
-        fields:
-        - {label: "Bild", name: "image", widget: "image"}
+        field: {label: "Bild", name: "image", widget: "image"}
   - name: "kontakta-oss" # Used in routes, e.g., /admin/collections/blog
     label: "Kontakta Oss" # Used in the UI
     delete: false # Prevent users from deleting documents in this collection
