--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "file-loader": "^1.1.9",
     "fs-extra": "^5.0.0",
     "html-webpack-plugin": "^2.30.1",
-    "meta-marked": "^0.4.2",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-markdown": "^3.2.2",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2"
   }
 }
