--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "Website of Unionen Seniorer Sjuhall",
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "webpack-dev-server --hot --inline",
     "build": "webpack -p",
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
@@ -16,6 +16,7 @@
     "babel-preset-react": "^6.24.1",
     "browser-sync": "^2.23.6",
     "copy-webpack-plugin": "^4.4.1",
+    "css-hot-loader": "^1.3.7",
     "css-loader": "^0.28.9",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.9",
