--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -70,6 +70,7 @@ collections:
           - {label: "Webbplatsens beskrivning", name: "site-description", widget: "string"}
   - name: "gallery"
     label: "Bildgalleri"
+    create: true
     slug: "{{slug}}"
     folder: "src/data/gallery"
     extension: json
