--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
   "description": "Website of Unionen Seniorer Sjuhall",
   "scripts": {
     "start": "webpack-dev-server --hot --inline",
-    "build": "webpack -p",
-    "storybook": "start-storybook -p 9001 -c .storybook"
+    "build": "webpack -p"
   },
   "devDependencies": {
-    "@storybook/react": "^3.3.14",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
@@ -26,6 +24,7 @@
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
+    "jimp": "^0.2.28",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-markdown": "^3.2.2",
