--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Website of Unionen Seniorer Sjuhall",
   "scripts": {
     "start": "webpack-dev-server --hot --inline",
-    "build": "webpack -p"
+    "build": "node ./optimize-images.js && webpack -p"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
