--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -43,6 +43,13 @@ collections:
         format: json
         fields:
           - {label: "Innehåll", name: "content", widget: "markdown"}
+      - name: "information"
+        label: "Information"
+        file: "src/data/pages/information.json"
+        extension: json
+        format: json
+        fields:
+          - {label: "Innehåll", name: "content", widget: "markdown"}
   - name: "settings"
     label: "Inställningar"
     delete: false # Prevent users from deleting documents in this collection
